@@ -41,7 +41,7 @@ public:
 	float TraceRay(const float3& start,const float3& dir,float length,float power,CUnit* owner, CUnit*& hit);
 	float GuiTraceRay(const float3& start,const float3& dir,float length, CUnit*& hit,float sizeMod,bool useRadar,CUnit* exclude=0);
 	float GuiTraceRayFeature(const float3& start, const float3& dir, float length,CFeature*& feature);
-	void Explosion(float3 pos,const DamageArray& damages,float radius,CUnit* owner,bool damageGround=true,float gfxMod=1,bool ignoreOwner=false,CExplosionGenerator *explosionGraphics=0);
+	void Explosion(float3 pos,const DamageArray& damages,float radius, float edgeEffectivness, CUnit* owner,bool damageGround=true,float gfxMod=1,bool ignoreOwner=false,CExplosionGenerator *explosionGraphics=0);
 	float TraceRayTeam(const float3& start,const float3& dir,float length, CUnit*& hit,bool useRadar,CUnit* exclude,int allyteam);
 	void BuggerOff(float3 pos, float radius,CUnit* exclude=0);
 	float3 Pos2BuildPos(float3 pos, const UnitDef* ud);
